// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <input
    class="sc-AxjAm gwaVxO"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <input
    class="sc-AxjAm dHvrNa"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a primary color 1`] = `
<div>
  <input
    class="sc-AxjAm livCLN"
    color="primary"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <input
    class="sc-AxjAm gwaVxO"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <input
    class="sc-AxjAm ccIiFH"
    color="warning"
    type="radio"
  />
</div>
`;
